--- a/flexblog-html/css/style.css
+++ b/flexblog-html/css/style.css
@@ -1,81 +1,93 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+body, h1, h2, p, ul, li, a {
+	margin: 0px;
+	padding: 0px;
 }
 
 body {
-  font-family: 'Nunito', Arial, Helvetica, sans-serif;
+	font-family: "Nunito", Helvetica, Arial, sans-serif;
+	color: #222222;
 }
 
 ul {
-  list-style: none;
+	list-style: none;
 }
 
 a {
-  text-decoration: none;
+	text-decoration: none;
 }
 
-.img {
-  display: block;
-  max-width: 100%;
+img {
+	display: block;
+	max-width: 100%;
 }
+
+* {
+	box-sizing: border-box;
+}
+
+/*Superinfo*/
 
 .superinfo-bg {
-  background: #122ab2;
-  color: white;
+	background: #122ab2;
+	color: white;
 }
 
 .superinfo {
-  max-width: 960px;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  padding-top: 10px;
+	max-width: 960px;
+	margin: 0 auto;
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	padding-top: 10px;
 }
 
-.superinfo p, .superinfo a {
-  margin: 0 10px 10px 10px;
+.superinfo p, .superinfo a{
+	margin: 0 10px 10px 10px;
 }
 
 .superinfo a {
-  color: white;
+	color: white;
 }
 
+/*Menu*/
+
 .menu-bg {
-  background: #2c70ff;
+	background: #2c70ff;
 }
 
 .menu {
-  max-width: 960px;
-  margin: 0 auto;
-  padding: 15px 0;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
+	max-width: 960px;
+	margin: 0 auto;
+	padding: 15px 0;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	align-items: center;
 }
 
 .menu a {
-  color: white;
+	color: white;
 }
 
 .menu-logo a {
-  font-size: 2.25em;
-  font-weight: bold;
-  margin: 0 10px;
+	font-size: 2.25em;
+	font-weight: bold;
+	margin: 0 10px;
 }
 
 .menu-nav ul {
-  display: flex;
-  flex-wrap: wrap;
+	display: flex;
+	flex-wrap: wrap;
 }
 
 .menu-nav a {
-  font-size: 1.25em;
-  display: block;
-  padding: 10px;
+	font-size: 1.25em;
+	display: block;
+	padding: 10px;
+}
+
+.menu-nav a:hover{
+	color: #122ab2;
 }
 
 .introducao {
@@ -88,4 +100,184 @@ a {
 
 .sobre {
   border-top: 2px solid #2c70ff;
+  border-bottom: 2px solid #2c70ff;
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 60px 0;
+  display: flex;
+  flex-wrap: wrap;
+  border-radius: 5px;
+}
+
+.sobre-info {
+  flex: 2 1 300px;
+  margin: 0 10px;
+}
+
+.sobre-info h1 {
+  font-size: 3em;
+  margin-bottom: .5em;
+}
+
+.sobre-info p {
+  font-size: 1.25em;
+  line-height: 1.4em;
+  margin-bottom: 1em;
+  color: #7c7c7c;
+}
+.sobre-img {
+  flex: 1 1 160px;
+  margin: 0 10px;
+}
+
+.sobre-img1 {
+  border-radius: 5px;
+}
+
+.produtos {
+  max-width: 960px;
+  margin: 60px auto;
+}
+
+.produtos h1 {
+  font-size: 3em;
+  margin: 0 10px 60px 10px;
+}
+
+.produtos-container {
+	display: flex;
+	flex-wrap: wrap;
+	align-items: flex-end;
+}
+
+.produtos-item {
+  flex: 1 1 175px;
+  flex-wrap: wrap;
+  margin: 10px;
+}
+
+.produtos-item h2 {
+  font-size: 3em;
+  color: #a4a4a4;
+  background: #f7f7f7;
+  padding: 60px 20px;
+}
+
+.purple {
+  border-top: 8px solid #ae81ff;
+  border-radius: 5px;
+}
+
+.pink {
+  border-top: 8px solid #f9265e;
+  border-radius: 5px;
+}
+
+.blue {
+  border-top: 8px solid #66d9eb;
+  border-radius: 5px;
+}
+
+.produtos-img1 {
+  border-radius: 0 0 5px 5px;
+}
+
+.preco {
+  background: #f7f7f7;
+  padding: 60px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-end;
+}
+
+.preco-item {
+  flex: 1;
+  padding: 20px;
+  margin: 10px;
+  border-radius: 5px;
+}
+
+.purple1 {
+  border: 3px solid #ae81ff;
+  border-radius: 5px;
+}
+
+.pink1 {
+  border: 3px solid #f9265e;
+  border-radius: 5px;
+}
+
+.blue1 {
+  border: 3px solid #66d9eb;
+  border-radius: 5px;
+}
+
+.preco-item h2 {
+  font-size: 3em;
+  color: #a4a4a4;
+  text-align: center;
+  margin-top: 20px;
+}
+
+.preco-item span {
+  max-width: 300px;
+  margin: 20px auto;
+  display: block;
+  text-align: center;
+  font-size: 2.25rem;
+  font-weight: bold;
+  padding: 10px 0 5px 0;
+  border-top: 3px solid #333;
+  border-bottom: 3px solid #333;
+  border-radius: 5px;
+}
+
+.preco-item sup {
+  font-size: 2.5rem;
+}
+
+.preco-item ul {
+  max-width: 300px;
+  margin: 20px auto;
+  font-size: 1.25em;
+  font-style: italic;
+  color: #7c7c7c;
+}
+
+.preco-item li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.preco-item li::after {
+  content: '';
+  display: block;
+  width: 6px;
+  height: 6px;
+  background: #2c70ff;
+  border-radius: 50%;
+}
+
+.preco-item a {
+  max-width: 300px;
+  display: block;
+  margin: 20px auto;
+  border: 3px solid;
+  color: #5d81f8;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.25em;
+  padding: 15px 0;
+  text-align: center;
+  border-radius: 5px;
+  background: #e5e8ff;
+}
+
+@media (max-width: 800px) {
+  .preco {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
