--- a/flexblog-html/css/style.css
+++ b/flexblog-html/css/style.css
@@ -239,7 +239,7 @@ img {
 .preco-item ul {
   max-width: 300px;
   margin: 20px auto;
-  font-size: 1.25em;
+  font-size: 1.1em;
   font-style: italic;
   color: #7c7c7c;
 }
@@ -280,4 +280,14 @@ img {
     padding-left: 10px;
     padding-right: 10px;
   }
+  .preco .preco-item:nth-child(3) {
+    order: -2;
+  }
+  .preco .preco-item:nth-child(2) {
+    order: -1;
+  }
+}
+
+.qualidade {
+  
 }
